--- a/styles/main.css
+++ b/styles/main.css
@@ -24,6 +24,12 @@ html {
     }
 }
 
+#logo {
+    width: 1.5rem;
+    height: 1.5rem;
+    margin: 0rem 0rem 0.15rem 0rem;
+}
+
 .flag {
     font-size: 1.7rem;
     padding: 0.1rem 0.5rem 0rem 0.5rem;
